poke/testsuite/poke.pkl/arrays-index-diag-3.pk
/* { dg-do compile } */

defvar a = [1,2,3][3+1]; /* { dg-error "" } */
